fix(moremenu): overflow hidden to fix scrollbar issue

--- a/app/client/stylesheets/components/pu-dropdown.sass
+++ b/app/client/stylesheets/components/pu-dropdown.sass
@@ -146,7 +146,8 @@
         box-shadow: 0 2px 5px rgba(#000, 0.1)
         padding-top: 0
         padding-bottom: 0
-        overflow: scroll
+        overflow: hidden
+
         ul
             padding-top: 20px
             padding-bottom: 20px
